2006-07-05  Benoît Dejean  <benoit@placenet.org>

        * linux-proc.c: (GetDiskLoad): Don't poll CIFS.
        Closes #344031.

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-02-14  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: Unconditionally destroy the graph widgets even if they're
	  not visible, otherwise they will simply be destroyed when their
	  container is destroyed, only it will crash now that it's user_data
	  has been free'd. Closes #316911.

2006-01-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* docs/es/es.po: Updated Spanish translation.

2006-01-21  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: small update

2006-01-16  Davyd Madeley  <davyd@madeley.id.au>

	* main.c: fix misleading tooltip for memory. Patch from
	  Benoît Dejean <benoit@placenet.org>. Closes #324048.

2006-01-15  Benoît Dejean  <benoit@placenet.org>

	* linux-proc.c: (GetDiskLoad): Don't poll network filesystems.
	Closes #316455.

2006-01-08  Vincent Untz  <vuntz@gnome.org>

	* docs/fr/fr.po: remove a fuzzy string

2006-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* linux-proc.c: (GetLoad), (GetSwap), (GetLoadAvg): Fix
	random drawing problems in the graph. (Baz Zoetekouw)
	Closes bug #320074.

2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* docs/C/multiload.xml: two little fixes (case and punctuation)
	* docs/Makefile.am:
	* docs/fr/*: add french translation by Christophe Bliard
	<christophe.bliard@trux.info>
	* docs/*: .cvsignore love

2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* docs/C/multiload.xml: fix bad copy and paste: s/Network/Harddisk/
	Fix bug #326106

2005-11-12  Benoît Dejean  <benoit@placenet.org>

	* linux-proc.c: #if 0 dead code.
	* load-graph.c: (load_graph_load_config): Fixed format string.
	* main.c: removed PANEL_APPLET_BONOBO_FACTORY trailing ;

	Patch from Kjartan Maraas <kmaraas@gnome.org>
	See #321266.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>
