@@ -1,5 +1,16 @@
 2006-07-05  Benoît Dejean  <benoit@placenet.org>
 
+	* global.h:
+	* linux-proc.c: (GetLoadAvg):
+	* main.c: (multiload_applet_tooltip_update):
+
+	Loadavg improvments.
+	Displays numeric load average.
+	Adjusted scale.
+	Closes #341822.
+
+2006-07-05  Benoît Dejean  <benoit@placenet.org>
+
         * linux-proc.c: (GetDiskLoad): Don't poll CIFS.
         Closes #344031.
 
